
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ship_following</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ck@todo.todo">ck</maintainer>
  <license>TODO: License declaration</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>


  <test_depend>python-mock</test_depend>

  <doc_depend>doxygen</doc_depend>






</package>


